syntax = "proto3";

package guru.qa.grpc.rangiffler;

option java_multiple_files = true;
option java_package = "guru.qa.rangiffler";
option java_outer_classname = "CountryProto";

service CountryService {
  rpc CountryByCode(CodeRequest) returns (CountryResponse);
  rpc AllCountries(AllCountriesRequest) returns (AllCountriesResponse);
}

message CodeRequest {
  string code = 1;
}

message CountryResponse {
  string id = 1;
  string code = 2;
  string name = 3;
  string flag = 4;
}

message AllCountriesResponse {
  repeated CountryResponse countries = 1;
}

message AllCountriesRequest {
  string sortBy = 1;
  string direction = 2;
}
